--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.18.1
+
   provider: ^6.0.5
   fluro: ^2.0.5
   shimmer: ^3.0.0
@@ -37,6 +41,14 @@ dependencies:
   cached_network_image: ^3.2.3
   build_runner: ^2.4.6
   shared_preferences: ^2.2.1
+  package_info_plus: ^4.0.2
+  change_app_package_name: ^1.1.0
+
+  #Network
+  json_serializable: ^6.7.1
+  json_annotation: ^4.8.1
+  dio: ^5.3.2
+  pretty_dio_logger: ^1.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,6 +76,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
