update base project

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.base_project"
+    namespace "com.devmai.aianimal.animalidentifier"
     compileSdk flutter.compileSdkVersion
     ndkVersion "25.1.8937393"
 
@@ -42,7 +42,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.base_project"
+        applicationId "com.devmai.aianimal.animalidentifier"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
@@ -65,12 +65,12 @@ android {
         product {
             dimension "flavor"
             applicationIdSuffix = ".product"
-            resValue "string", "app_name", "Base Project"
+            resValue "string", "app_name", "Animal Identifier"
         }
         dev {
             dimension "flavor"
             applicationIdSuffix = ".dev"
-            resValue "string", "app_name", "Base Project"
+            resValue "string", "app_name", "Animal Identifier"
         }
     }
 }
