--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,19 @@ dependencies:
   shared_preferences: ^2.2.1
   package_info_plus: ^4.0.2
   change_app_package_name: ^1.1.0
+  camera: ^0.11.0+1
+#  permission_handler: ^12.0.1
+  image_picker: ^1.1.2
 
   #Network
   json_serializable: ^6.7.1
   json_annotation: ^4.8.1
   dio: ^5.3.2
   pretty_dio_logger: ^1.3.1
+  connectivity_plus: ^7.0.0
+
+  #AI
+  google_generative_ai: ^0.4.7
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -94,17 +101,25 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: dmsans_bold
+      fonts:
+        - asset: assets/font/dmsans_bold.ttf
+    - family: dmsans_regular
+      fonts:
+        - asset: assets/font/dmsans_regular.ttf
+    - family: lato_bold
+      fonts:
+        - asset: assets/font/lato_bold.ttf
+    - family: lato_regular
+      fonts:
+        - asset: assets/font/lato_regular.ttf
+    - family: poppins_bold
+      fonts:
+        - asset: assets/font/poppins_bold.ttf
+    - family: poppins_semi_bold
+      fonts:
+        - asset: assets/font/poppins_semi_bold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
