--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  intl: ^0.18.1
+#  flutter_localizations:
+#    sdk: flutter
+#  intl: ^0.18.1
 
   provider: ^6.0.5
   fluro: ^2.0.5
